Bug 604473 - incorporated recommendations from third round of code review - mostly minor style and readabilty stuff, but also fixed l10n issues and removed invalid timeout for notification.

--- a/extension/content/browser.css
+++ b/extension/content/browser.css
@@ -45,27 +45,6 @@
     font-size: large;
 }
 
-/* .popup-notification-icon[popupid="study-finished"] {
-  list-style-image: url("chrome://testpilot/skin/tp-submit-48x48.png");
-  height: 48px;
-  width: 48px;
-}
-.popup-notification-icon[popupid="new-study"] {
-  list-style-image: url("chrome://testpilot/skin/tp-study-48x48.png");
-  height: 48px;
-  width: 48px;
-}
-.popup-notification-icon[popupid="new-results"] {
-  list-style-image: url("chrome://testpilot/skin/tp-results-48x48.png");
-  height: 48px;
-  width: 48px;
-}
-.popup-notification-icon[popupid="study-submitted"] {
-  list-style-image: url("chrome://testpilot/skin/status-completed.png");
-  height: 32px;
-  width: 64px;
-}*/
-
 /* For older notification system */
 
 /* Popup Bounding Box */
